--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       publishing software like Aldus PageMaker including versions of Lorem
       Ipsum.
     </p>
-    <a></a>
+    <a href="https://www.google.com/">Google Link</a>
     <img src="img\pancakes.jpg" width="600" />
   </body>
 </html>
